[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ocl-python"
version = "0.1.0"
description = "Python port of the OCL categorical clustering algorithm."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.scripts]
ocl-run = "ocl_python.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
